# ForgeOs

./: .editorconfig  .env.example  .gitattributes  .gitignore  ForgeOS_Feature_Audit_Prompt.md  ForgeOS_Product_Specification_v2.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  backend.md  feature_audit_report.md  frontend.md  implementation_plan.md  qa_testing.md  sprint-1.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/analysis/: __init__.py  dependency_graph.py  repository_analyzer.py
backend/app/api/: __init__.py  routes.py
backend/app/events/: __init__.py  manager.py
backend/app/models/: __init__.py  events.py  schemas.py
backend/app/pipeline/: __init__.py  decision_engine.py  orchestrator.py  state.py
backend/app/repository/: __init__.py  workspace.py
backend/app/services/: __init__.py  ai_insights.py  ai_repair.py  artifact_manager.py  business_intelligence.py  git_integration.py  patch_manager.py  repair_engine.py  rollback_manager.py
backend/app/verification/: __init__.py  pytest_runner.py
backend/demo_repository/: README.md  requirements.txt
backend/demo_repository/app/: __init__.py  main.py  models.py  repository.py
backend/demo_repository/tests/: conftest.py  test_items.py  test_models.py
backend/tests/: test_ai_activity_telemetry.py  test_ai_safety.py  test_config.py  test_dependency_graph.py  test_event_manager.py  test_git_integration.py  test_local_cors.py  test_test_execution_truthfulness.py
docs/: README.md  api.md  architecture.md  configuration.md  (+5 more)
(+30 files in other folders)
